--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "mkdir -p ./lib/xeokit-bim-viewer; cp ./node_modules/@xeokit/xeokit-bim-viewer/dist/* ./lib/xeokit-bim-viewer/.",
     "create-demo-project": "node ./createProject.js -p demoProject -s ./demoModels/**/*",
     "delete-demo-project": "node deleteProject.js -p demoProject",
-    "start": "node index.js" ,
-    "start-http":"http-server -p 3002"
+    "start":"http-server -p 3002 && node index.js"
   },
   "repository": {
     "type": "git",
